tests/NormalTests/paczka2/big_fuzzy/85022925.err
Error in line 10: tmcg4Dd138 S573 33,7
Error in line 8: cW0lKEEqU S42 86,9
Error in line 15: 6IumpxB2q S42 73,5
Error in line 25: S573 S573 79,6
Error in line 32: S573 A768 66,4
Error in line 30: tmcg4Dd138 S573 96,8
Error in line 45: cW0lKEEqU S573 79,18
Error in line 40: eN9gvX8 S573 77,1
Error in line 51: 4eIuQ S389 85,7
Error in line 41: cW0lKEEqU S573 28,5
Error in line 50: 6IumpxB2q S42 88,0
Error in line 60: 6IumpxB2q S389 19,0
Error in line 73: tmcg4Dd138 A768 18,5
Error in line 87: S573 A7N8 20,4
Error in line 92: eN9gvX8 S42 96,7
Error in line 77: cW0lKEEqU S42 153,2
Error in line 97: cW0lKEEqU S389 12,7
Error in line 101: tmcg4Dd138 S573 90,0
Error in line 106: 6IumpxB2q S573 16,4
Error in line 115: 4eIuQ S42 -2,8
Error in line 126: tmcg4Dd138 S5$3 88,2
Error in line 112: 4eIuQ S42 61,0
Error in line 119: eN9gvX8 S389 139,1
Error in line 141: tmcg4Dd138 S42 350,6
Error in line 161: eN9gvX8 S389 84,7
Error in line 162: eN9gvX8 S42 6,5
Error in line 151: 4eIuQ A768 34,1
Error in line 175: gCw5 S573 53,9
Error in line 178: gCw5 S42 28,9
Error in line 184: S573 A768 121,2
Error in line 180: cW0lKEEqU S573 49,2
Error in line 189: S573 A768 73,3
Error in line 204: 6IumpxB2q S573 43,8
Error in line 219: cW0lKEEqU S389 89,5
Error in line 227: 4eIuQ S389 39,1
Error in line 242: cW0lKEEqU S42 69,7
Error in line 246: cW0lKEEqU S573 12,3
